# cjp2p-rust

./: Cargo.toml  Makefile  README-lib.md  README.md  WEBSOCKET_API.md  build.rs  build_android.sh  build_android_hello.sh  build_android_hello.sh.screen_log_ocr.txt  build_android_oneplusone.sh  gen-icons.py  html_slurp.sh  optimizations_not_needed_right_now.txt  publish.sh  quickstart_build_a_p2p_app_with_one_prompt.md  quickstart_build_a_p2p_twitter_with_one_prompt.md
.github/workflows/: binaries.yml  fmt.yml  release.yml  tauri-apk-release.yml
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/cjp2p/: BackendService.java  MainActivity.java  NativeLib.java
android/app/src/main/res/layout/: activity_main.xml
cjp2p-ctl/: Cargo.toml  rustfmt.toml
cjp2p-ctl/src/: actions.rs  cli.rs  client.rs  git.rs  lib.rs  types.rs
cjp2p-ctl/src/tui/: mod.rs  widgets.rs
cjp2p/public/: C5.html  c5.html  chat5  chat6.html  dashboard.html  phone.html  phone2.html  pong.html  video.html
ctl/: Cargo.toml  Makefile
ctl/src/tui/: poller.rs
deploy/: cjp2p.service
docs/adr/: 0001-rust-formatting-standard.md
src/: chat2.html  chat3.html  chat4.html  chat5.html  lib.rs  main.rs  phone.html
tauri-app/: .gitignore  gen-icons.py
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/src/: lib.rs  main.rs
