[package]
name = "libcjp"
version = "0.2.7"
edition = "2021"
license =  "GPL-3.0-only"
description = "Connectionless JSON P2P (CJP2P) implementation in Rust.   To build message focused, not connection focused, p2p (peer-to-peer) applications keeping only as much state about peers as you prefer, and without relaying messages due to connection limits."
repository = "https://github.com/kermit4/cjp2p-rust/"
keywords = ["JSON","P2P","UDP","decentralized"]
categories = ["network-programming","filesystem","email","cryptography::cryptocurrencies"]
include =  ["Cargo.lock", "Cargo.toml", "LICENSE", "README-lib.md", "src/lib.rs"]
readme = "README-lib.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = ">=0.0.0"
bitvec = ">=0.0.0"
bincode = ">=0.0.0"
serde = { version = ">=0.0.0" , features = ["derive"] }
serde_json = { version = ">=0.0.0"  }
serde-big-array = ">=0.0.0"
sha2 =   ">=0.0.0"
base64 =   ">=0.0.0"
env_logger =   ">=0.0.0"
log =   ">=0.0.0"
rand =   ">=0.0.0"
chrono =   ">=0.0.0"
getifaddrs =   ">=0.0.0"
scanf =   "=1.2.3"
nix =   { version = ">=0.0.0" , features = ["net","poll"] }
#blake3 = "=1.8.2"
snow =   { version = "0.9.3", features = ["ring-accelerated"]} 
serde_with = { version = "3.15.1", features = ["base64","alloc"] }
time-core = ">=0.1.0"
memmap2 = ">=0.0.0"
infer = ">=0.0.0"
enum_dispatch = ">=0.0.0"
dns-lookup = ">=0.0.0"
socket2 = ">=0.0.0"

