[package]
name = "cjp2p"
version = "0.3.0"
edition = "2021"

[lib]
name = "cjp2p"
path = "src/main.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "cjp2p"
path = "src/bin/cjp2p.rs"

[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.21", default-features = false }

[dependencies]
hex = ">=0.0.0"
bitvec = ">=0.0.0"
bincode = "1.3.3"
serde = { version = ">=0.0.0" , features = ["derive"] }
serde_json = { version = ">=0.0.0"  }
serde-big-array = ">=0.0.0"
sha2 =   ">=0.0.0"
base64 =   ">=0.0.0"
env_logger =   ">=0.0.0"
log =   ">=0.0.0"
rand =   ">=0.0.0"
chrono =   ">=0.0.0"
getifaddrs =   ">=0.0.0"
scanf =   "=1.2.3"
nix =   { version = ">=0.0.0" , features = ["net","poll"] }
#blake3 = "=1.8.2"
snow =   { version = "0.9.3", features = ["ring-accelerated"]} 
serde_with = { version = "3.15.1", features = ["base64","hex","alloc"] }
time-core = ">=0.1.0"
memmap2 = ">=0.0.0"
mimetype-detector = ">=0.0.0"
enum_dispatch = ">=0.0.0"
dns-lookup = ">=0.0.0"
socket2 = ">=0.0.0"
urlencoding = ">=0.0.0"
tungstenite = ">=0.0.0"
alloy = { version = ">0.0.0", default-features = false, features = ["signers"] }
igd = ">=0.0.0"
ed25519-dalek = "2"
curve25519-dalek = "4"
