[package]
name = "cjp2p-ctl"
version = "0.1.0"
edition = "2021"
description = "CLI + TUI control tool for a local cjp2p / LCDP node"

[lib]
name = "cjp2p_ctl"
path = "src/lib.rs"

[[bin]]
name = "cjp2pctl"
path = "src/bin/cjp2pctl.rs"

[[bin]]
name = "git-remote-lcdp"
path = "src/bin/git-remote-lcdp.rs"

[features]
default = []
tui = ["dep:ratatui", "dep:crossterm"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
urlencoding = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tungstenite = "0.29"
# TUI-only — behind the feature so the headless CLI build stays slim:
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }
