[package]
name = "cjp2p-tauri"
version = "0.1.0"
edition = "2021"

[lib]
name = "cjp2p_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "cjp2p-tauri"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-notification = "2"
cjp2p = { path = "../.." }

[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.21", default-features = false }
